# ai-shared-agent-toolkit

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
agent_toolkit/: __init__.py  generator.py  public_surface.py  restore.py
config/: restore.example.json
examples/shared/context/: working-style.md
examples/tools/codex/: head.md  tail.md
shared/ci/woodpecker/templates/: public-surface.yml  python-json-unittest.yml  shell-powershell.yml
shared/hooks/: policy.mjs
shared/memory-audit/: agent-ledger-event.schema.json  memory-entry.schema.json
shared/skills/template/: SKILL.md
tests/: test_generator.py  test_public_surface.py  test_restore.py
