[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-shared-agent-toolkit"
version = "0.1.0"
description = "Generic cross-agent configuration generator and templates"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Public Maintainers" }]

[project.scripts]
ai-shared-render = "agent_toolkit.generator:main"

